--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node_modules/nodemon/bin/nodemon.js -- node_modules/babel-cli/bin/babel-node.js index.js"
+    "start": "node_modules/babel-cli/bin/babel-node.js index.js"
   },
   "author": "Teofilus Candra",
   "license": "ISC",
