--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0"
+  },
+  "engines": {
+    "node": "8.2.1"
   }
 }
