--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "cookie-session": "^2.0.0-beta.2",
+    "ejs": "^2.5.7",
     "express": "^4.15.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
